# airflow-example

./: .gitignore  README.md  airflow.cfg  pyproject.toml  setup.sh
dags/: airflow.cfg  datahub_subdag.py  lineage_backend_demo.py  lineage_backend_demo_copy.py  subdag.py
